--- a/inst/doc/genoprob_use_cases.Rmd
+++ b/inst/doc/genoprob_use_cases.Rmd
@@ -14,12 +14,13 @@ This documents use cases for `calc_genoprob` objects in package `Rqtl/qtl2geno`.
 Use `grep` to find use cases in `R/*.R` files. After looking for `genoprob` and `probs`,
 here are the cases that remain unsolved.
 
-* `RcppExports.R` | various routines pass `probs` to `C++` subroutines in `R/qtl2geno` and `R/qtl2scan`
+* `RcppExports.R`
+    + various routines pass `probs` to `C++` subroutines in `R/qtl2geno` and `R/qtl2scan`
 * `vapply,lapply,sapply`
     + `calc_kinship` and `scan1` get `mar` dimension acros `chr` 
     + feather: `feather_genoprob_list(genoprobs, dim)[3,]`
     + `genoprob_col2drop` uses `lapply(probs, genoprobs_col2drop)`
-    + `sapply(probs, dim)` used in some function exaples
+    + `sapply(probs, dim)` used in some function examples
 * `genoprob_to_alleleprob` and `genoprob_to_snpprob` each return a `calc_genoprob` object
     + would have to convert post-hoc to `feather_genoprob` each time if desired
 * `probs_to_grid` used only by `calc_kinship`
@@ -30,10 +31,24 @@ here are the cases that remain unsolved.
 * stuff in `qtl2convert`?
 * tests in `tests/testthat` seem OK
 
+Two fixable things:
+
+1.	Make a helper routine that gets dimensions across chromosomes. Make it a method function so that we can have separate methods by database type. Replace `{v,l,s}apply` with this.
+2.	Fix `probs_to_grid` to explicitly make sure attributes carry forward.
+
+Not sure what to do about `lapply()` in `genoprob_col2drop`.
+
+With these fixes, the following routines will return calc_genoprob objects as is:
+
+* `genoprob_to_alleleprob`
+* `genoprob_to_snpprob`
+* `probs_to_grid`
+
+The last one is basically internal, but the other two are used a lot. But probably best to have user explicitly convert to feather as they will need to supply a `basename` and know a file is being created.
 
 routine                  |  use case
 ------------------------ | --------------------------------------
-`R/qtl2geno` |
+`R/qtl2geno` | ` `
 `RcppExports.R` | pass argument `probs` or `genoprobs` to various subroutines
 `calc_kinship.R` |    `vapply(probs, function(a) dim(a)[3], 0)[chrs]`
 `genoprob_to_alleleprob.R` | `genoprob_to_alleleprob(probs) #` returns `calc_genoprob` object
