--- a/inst/doc/genoprob_use_cases.Rmd
+++ b/inst/doc/genoprob_use_cases.Rmd
@@ -9,13 +9,13 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-This documents use cases for `calc_genoprob` objects in package `Rqtl/qtl2geno`. The `R/qtl2feather` is intended to meet these use cases with new `subset`, `rbind`, and `cbind` and other operators for an S3 class `feather_genoprob`. The routine `feather_genoprob()` creates a [feather](https://github.com/wesm/feather) database for the `probs` part of a `calc_genoprobs` object.
+This documents use cases for `calc_genoprob` objects in package `Rqtl/qtl2`. The `R/qtl2feather` is intended to meet these use cases with new `subset`, `rbind`, and `cbind` and other operators for an S3 class `feather_genoprob`. The routine `feather_genoprob()` creates a [feather](https://github.com/wesm/feather) database for the `probs` part of a `calc_genoprobs` object.
 
 Use `grep` to find use cases in `R/*.R` files. After looking for `genoprob` and `probs`,
 here are the cases that remain unsolved.
 
 * `RcppExports.R`
-    + various routines pass `probs` to `C++` subroutines in `R/qtl2geno` and `R/qtl2scan`
+    + various routines pass `probs` to `C++` subroutines in `R/qtl2`
 * `vapply,lapply,sapply`
     + `calc_kinship` and `scan1` get `mar` dimension acros `chr` 
     + feather: `feather_genoprob_list(genoprobs, dim)[3,]`
@@ -48,15 +48,12 @@ The last one is basically internal, but the other two are used a lot. But probab
 
 routine                  |  use case
 ------------------------ | --------------------------------------
-`R/qtl2geno` | ` `
 `RcppExports.R` | pass argument `probs` or `genoprobs` to various subroutines
 `calc_kinship.R` |    `vapply(probs, function(a) dim(a)[3], 0)[chrs]`
 `genoprob_to_alleleprob.R` | `genoprob_to_alleleprob(probs) #` returns `calc_genoprob` object
 `probs_to_grid.R` | `probs_to_grid(probs, grid) #` returns list but watch out
 `probs_to_grid.R` | `sapply(probs, dim)`
  |
-`R/qtl2scan` |
-`RcppExports.R` | pass argument `probs` or `genoprobs` to various subroutines
 `genoprob_col2drop.R` | `lapply(probs, genoprobs_col2drop)`
 `genoprob_to_snpprob` | `genoprob_to_snpprob(probs, snpinfo)` returns `calc_genoprob` object
 `scan1.R`            | `genoprobs[[chr]][these2keep,-Xcol2drop,,drop=FALSE]`
