--- a/vignettes/feather_genoprob.Rmd
+++ b/vignettes/feather_genoprob.Rmd
@@ -4,7 +4,7 @@ author: "Brian S. Yandell"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Put the title of your vignette here}
+  %\VignetteIndexEntry{Create feather_genoprob for qtl2 data}
   %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
 ---
