--- a/vignettes/feather_scan1.Rmd
+++ b/vignettes/feather_scan1.Rmd
@@ -4,7 +4,7 @@ author: "Brian S. Yandell"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Put the title of your vignette here}
+  %\VignetteIndexEntry{Use feather_genoprob with scan1}
   %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
 ---
